@@ -1,6 +1,8 @@
 ver 0.24.3 (not yet released)
 * decoder
   - mpg123: fix trailing space in tag values
+* oss
+  - output: fix error "Resource temporarily unavailable"
 
 ver 0.24.2 (2025/03/26)
 * input
